--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,57 @@
     <modules>
         <module>spring-webservice</module>
     </modules>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.jdk>1.8</project.build.jdk>
+        <plugin.maven.compiler>3.3</plugin.maven.compiler>
+        <plugin.maven.war>2.6</plugin.maven.war>
+        <plugin.maven.tomcat>2.2</plugin.maven.tomcat>
+        <plugin.maven.dependency>2.10</plugin.maven.dependency>
+        <plugin.maven.source>2.4</plugin.maven.source>
+        <springframework.version>4.3.7.RELEASE</springframework.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
+        <spring.rabbit.version>1.7.1.RELEASE</spring.rabbit.version>
+        <rabbitmq.version>4.1.0</rabbitmq.version>
+        <httpclient.version>4.5.2</httpclient.version>
+        <servlet.api.version>3.1.0</servlet.api.version>
+        <jsp.api.version>2.0</jsp.api.version>
+        <jstl.version>1.2</jstl.version>
+        <logback.version>1.2.3</logback.version>
+        <jsoup.version>1.9.1</jsoup.version>
+        <commons.net.version>3.6</commons.net.version>
+        <phantom.js.version>1.3.0</phantom.js.version>
+        <itextpdf.version>5.5.9</itextpdf.version>
+        <mysqlconnector.version>5.1.41</mysqlconnector.version>
+        <tomcat.jdbc.version>8.5.13</tomcat.jdbc.version>
+        <junit.version>4.12</junit.version>
+        <elasticsearch.version>5.3.0</elasticsearch.version>
+        <commons.version>1.5-SNAPSHOT</commons.version>
+        <freemarker.version>2.3.23</freemarker.version>
+        <taglibs.version>1.1.2</taglibs.version>
+        <jasypt.version>1.9.2</jasypt.version>
+        <poi.version>3.14</poi.version>
+        <poi-ooxml.version>3.14</poi-ooxml.version>
+        <easy.rule.version>3.0.0</easy.rule.version>
+        <fastjson.version>1.2.6</fastjson.version>
+        <spring.session.version>1.3.1.RELEASE</spring.session.version>
+        <cas.client.version>3.4.1</cas.client.version>
+        <cxf.version>3.1.10</cxf.version>
+        <axis2.version>1.7.4</axis2.version>
+        <maven.repository.address>http://192.168.6.217:8081</maven.repository.address>
+    </properties>
 
 </project>
